[mod] navlist style

--- a/src/NavList.less
+++ b/src/NavList.less
@@ -9,7 +9,6 @@
 .nav-item {
   flex: 1;
   text-align: center;
-  position: relative;
   text-decoration: none;
 
   &:before {
@@ -43,9 +42,22 @@
 
   &.active {
     color: red;
+    &:before {
+      border-color: green;
+    }
+
+    &:after {
+      background-color: green;
+    }
   }
 }
 
 .nav-name {
+  margin-top: 5px;
+  font-size: 15px;
+  color: #656262;
 
+  .active & {
+    color: red;
+  }
 }
