--- a/src/NavList.css
+++ b/src/NavList.css
@@ -8,7 +8,6 @@
 .nav-item {
   flex: 1;
   text-align: center;
-  position: relative;
   text-decoration: none;
 }
 .nav-item:before {
@@ -38,5 +37,19 @@
   content: none;
 }
 .nav-item.active {
+  color: red;
+}
+.nav-item.active:before {
+  border-color: green;
+}
+.nav-item.active:after {
+  background-color: green;
+}
+.nav-name {
+  margin-top: 5px;
+  font-size: 15px;
+  color: #656262;
+}
+.active .nav-name {
   color: red;
 }
