--- a/src/NavList.css
+++ b/src/NavList.css
@@ -4,11 +4,14 @@
   align-item: center;
   counter-reset: step;
   margin-top: 20px;
+  overflow: hidden;
 }
 .nav-item {
   flex: 1;
   text-align: center;
   text-decoration: none;
+  position: relative;
+  color: green;
 }
 .nav-item:before {
   content: counter(step);
@@ -27,7 +30,7 @@
   content: '';
   position: absolute;
   width: 100%;
-  height: 1px;
+  height: 2px;
   background-color: #ddd;
   top: 25px;
   left: -50%;
@@ -36,11 +39,11 @@
 .nav-item:first-child:after {
   content: none;
 }
-.nav-item.active {
-  color: red;
-}
 .nav-item.active:before {
   border-color: green;
+  background-color: green;
+  color: white;
+  font-weight: bold;
 }
 .nav-item.active:after {
   background-color: green;
@@ -49,7 +52,4 @@
   margin-top: 5px;
   font-size: 15px;
   color: #656262;
-}
-.active .nav-name {
-  color: red;
 }
