--- a/src/NavList.less
+++ b/src/NavList.less
@@ -4,12 +4,15 @@
   align-item: center;
   counter-reset: step;
   margin-top: 20px;
+  overflow: hidden;
 }
 
 .nav-item {
   flex: 1;
   text-align: center;
   text-decoration: none;
+  position: relative;
+  color: green;
 
   &:before {
     content: counter(step);
@@ -29,7 +32,7 @@
     content: '';
     position: absolute;
     width: 100%;
-    height: 1px;
+    height: 2px;
     background-color: #ddd;
     top: 25px;
     left: -50%;
@@ -41,9 +44,11 @@
   }
 
   &.active {
-    color: red;
     &:before {
       border-color: green;
+      background-color: green;
+      color: white;
+      font-weight: bold;
     }
 
     &:after {
@@ -56,8 +61,4 @@
   margin-top: 5px;
   font-size: 15px;
   color: #656262;
-
-  .active & {
-    color: red;
-  }
 }
